# dict-typer-js

./: README.md  package.json  tsconfig.json
.github/workflows/: lint.yml  test.yml  type.yml
scripts/: Makefile  README.md  compare.py  pyproject.toml
src/: baseTypes.ts  hello.ts  index.ts  models.test.ts  models.ts  parser.test.ts  parser.ts  typeDefinitions.test.ts  typeDefinitions.ts  types.ts  utils.test.ts  utils.ts
