[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
black = "^19.10b0"
mypy = "^0.770"
flake8 = "^3.7.9"
flake8-builtins = "^1.5.2"
flake8-isort = "^3.0.0"
flake8-bugbear = "^20.1.4"
flake8-black = "^0.1.1"
flake8-comprehensions = "^3.2.2"
ipdb = "^0.13.2"
pdbpp = "^0.10.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
